# lite-spleeter

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
spleeter/: __init__.py  __main__.py  options.py  separator.py
spleeter/audio/: __init__.py  adapter.py  ffmpeg.py
spleeter/utils/: configuration.py  downloader.py  tensor.py
